--- a/WebModule/src/main/res/layout/activity_web.xml
+++ b/WebModule/src/main/res/layout/activity_web.xml
@@ -8,23 +8,17 @@
 
     <include layout="@layout/web_toolbar" />
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <FrameLayout
-            android:id="@+id/fl_loading"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </FrameLayout>
+        android:layout_height="match_parent"
+        >
 
         <WebView
             android:id="@+id/webview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </FrameLayout>
+        <include layout="@layout/web_layout_loading"/>
+
+    </RelativeLayout>
 </LinearLayout>
